[gd_scene load_steps=14 format=2]

[ext_resource path="res://gui/screens/exit_dialog/assets/GUI.png" type="Texture" id=1]
[ext_resource path="res://gui/screens/exit_dialog/scripts/ExitDialog.gd" type="Script" id=2]
[ext_resource path="res://gui/screens/exit_dialog/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 96, 48, 32 )

[sub_resource type="DynamicFont" id=4]
size = 31
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 7
extra_spacing_bottom = 7
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 81, 46, 14 )

[sub_resource type="DynamicFont" id=10]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 7
extra_spacing_bottom = 7
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 98, 46, 13 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 81, 46, 14 )

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -298.0
margin_right = 238.0
margin_bottom = 254.0
rect_min_size = Vector2( 456, 552 )
rect_clip_content = true
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -276.0
margin_right = 228.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 100, 100 )
alignment = 1

[node name="titleLbl" type="Label" parent="PopupPanel/VBoxContainer2"]
margin_top = 216.0
margin_right = 456.0
margin_bottom = 247.0
custom_fonts/font = SubResource( 4 )
text = "Leave game?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer2"]
margin_top = 251.0
margin_right = 456.0
margin_bottom = 291.0
alignment = 1

[node name="YesBtn" type="Button" parent="PopupPanel/VBoxContainer2/HBoxContainer"]
modulate = Color( 1, 0.372549, 0.372549, 1 )
margin_left = 148.0
margin_right = 308.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "        YES        "

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupPanel/VBoxContainer2"]
margin_top = 295.0
margin_right = 456.0
margin_bottom = 335.0
alignment = 1

[node name="NoBtn" type="Button" parent="PopupPanel/VBoxContainer2/HBoxContainer2"]
modulate = Color( 0.690196, 0.992157, 0.541176, 1 )
margin_left = 148.0
margin_right = 308.0
margin_bottom = 40.0
rect_min_size = Vector2( 160, 40 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
shortcut_in_tooltip = false
text = "No, keep playing"
icon_align = 1

[connection signal="pressed" from="PopupPanel/VBoxContainer2/HBoxContainer/YesBtn" to="." method="_on_YesBtn_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer2/HBoxContainer2/NoBtn" to="." method="_on_NoBtn_pressed"]
